# LMS

./: .gitignore  README.md
build-LMS-Desktop_Qt_6_6_2_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
client/: CMakeLists.txt  LMS.pro  main.cpp  resourse.qrc
client/ClientManager/: clientmanager.cpp  clientmanager.h  socketparser.cpp  socketparser.h
client/ClientManager/certificate/: client.key
client/ClientState/: clientstate.cpp  clientstate.h
client/FontManager/: fontmanager.cpp  fontmanager.h
client/Forms/AddGroup/: addgroup.cpp  addgroup.h  addgroup.ui
client/Forms/Auth/: auth.cpp  auth.h  auth.ui
client/Forms/CourseAdder/: courseadder.cpp  courseadder.h  courseadder.ui
client/Forms/CoursePage/: coursepage.cpp  coursepage.h  coursepage.ui
client/Forms/CoursePage/AdminScore/: adminscore.cpp  adminscore.h  adminscore.ui
client/Forms/CoursePage/CheckDZ/: checkdz.cpp  checkdz.h  checkdz.ui
client/Forms/CoursePage/CheckDZ/CheckDzComponents/: checkdzcomponents.cpp  checkdzcomponents.h  checkdzcomponents.ui
client/Forms/CoursePage/CheckDZ/DzMarkEditer/: dzmarkediter.cpp  dzmarkediter.h  dzmarkediter.ui
client/Forms/CoursePage/CoursePageEditor/: coursepageeditor.cpp  coursepageeditor.h  coursepageeditor.ui
client/Forms/CoursePageComponents/: componentswidgetfactory.h
client/Forms/CoursePageComponents/CourseAttestacion/: courseattestacion.cpp  courseattestacion.h  courseattestacion.ui
client/Forms/CoursePageComponents/CourseDownload/: coursedownload.cpp  coursedownload.h  coursedownload.ui
client/Forms/CoursePageComponents/CourseDz/: coursedz.cpp  coursedz.h  coursedz.ui
client/Forms/CoursePageComponents/CourseDz/CourseDzPage/: coursedzpage.cpp  coursedzpage.h  coursedzpage.ui
client/Forms/CoursePageComponents/CourseText/: coursetext.cpp  coursetext.h  coursetext.ui
client/Forms/CoursesMPWidget/: coursesmpwidget.cpp  coursesmpwidget.h  coursesmpwidget.ui
client/Forms/Download/: download.cpp  download.h  download.ui
client/Forms/GroupEditor/: groupeditor.cpp  groupeditor.h  groupeditor.ui
client/Forms/Loader/: loader.cpp  loader.h  loader.ui
client/Forms/Loader/LoaderComponent/: loadercomponent.cpp  loadercomponent.h  loadercomponent.ui
client/Forms/Main/: mainwindow.cpp  mainwindow.h  mainwindow.ui
client/Forms/MyWidget/: mywidget.cpp  mywidget.h  mywidget.ui
client/Forms/Notification/: notification.cpp  notification.h  notification.ui
client/Forms/PotokAdder/: potokadder.cpp  potokadder.h  potokadder.ui
client/Forms/Profile/: profile.cpp  profile.h  profile.ui
client/Forms/Reconnect/: reconnect.cpp  reconnect.h  reconnect.ui
client/Forms/Score/: score.cpp  score.h  score.ui
client/Forms/Score/ScoreComponents/: scorecomponents.cpp  scorecomponents.h  scorecomponents.ui
client/Forms/Score/TestTaskComponents/: testtaskcomponents.cpp  testtaskcomponents.h  testtaskcomponents.ui
client/Forms/TestWidget/: testwidget.cpp  testwidget.h  testwidget.ui
client/Forms/TestWidget/TestEditor/: testeditor.cpp  testeditor.h  testeditor.ui
client/Forms/TestWidget/TestPassing/: testpassing.cpp  testpassing.h  testpassing.ui
client/QXlsx/: CMakeLists.txt
client/QXlsx/source/: xlsxabstractooxmlfile.cpp  xlsxabstractsheet.cpp  xlsxcell.cpp  xlsxcellformula.cpp  xlsxcelllocation.cpp  xlsxcellrange.cpp  xlsxcellreference.cpp  xlsxchart.cpp  xlsxchartsheet.cpp  xlsxcolor.cpp  xlsxconditionalformatting.cpp  xlsxcontenttypes.cpp  xlsxdatavalidation.cpp  xlsxdatetype.cpp  xlsxdocpropsapp.cpp  xlsxdocpropscore.cpp  xlsxdocument.cpp  xlsxdrawing.cpp  xlsxdrawinganchor.cpp  xlsxformat.cpp  xlsxmediafile.cpp  xlsxnumformatparser.cpp  xlsxrelationships.cpp  xlsxrichstring.cpp  xlsxsharedstrings.cpp  xlsxsimpleooxmlfile.cpp  xlsxstyles.cpp  xlsxtheme.cpp  xlsxutility.cpp  xlsxworkbook.cpp  xlsxworksheet.cpp  xlsxzipreader.cpp  xlsxzipwriter.cpp
client/StyleManager/: stylemanager.cpp  stylemanager.h
client/XlsxUtils/: xlsxutils.cpp  xlsxutils.h
client/resources/: icon.icns
common/authentication/: authentication.cpp  authentication.h  generate_password.cpp  generate_password.h  group.cpp  group.h  translate.cpp  translate.h
common/course/: course.cpp  course.h
common/course/course_components/: coursecomponent.cpp  coursecomponent.h  coursemediafiles.cpp  coursemediafiles.h  coursepdf.cpp  coursepdf.h  coursetask.cpp  coursetask.h  coursetest.cpp  coursetest.h  coursetutorials.cpp  coursetutorials.h  coursevideos.cpp  coursevideos.h  question.cpp  question.h
common/transferEnum/: transferEnum.h
database/: databaseManager.cpp  databaseManager.h
server/build-server-Qt_6_6_2_for_macOS-Debug/.qtc_clangd/: compile_commands.json
server/build-server-Qt_6_6_2_for_macOS-Debug/.qtc_clangd/.cache/clangd/index/: QCoreApplication.2FD617FB62F69D1F.idx  __stddef_max_align_t.h.38AB6FBFB4963727.idx  _symbol_aliasing.h.1A5B15305E55B8B0.idx  integral_constant.h.6DE430EF162028D5.idx  limits.h.099B3D00B5A3FD7D.idx  limits.h.936FAC89EC2DCCF5.idx  main.cpp.5E84D611F7E91199.idx  q20functional.h.C949BCBF7AC0432E.idx  q20memory.h.52D91724BAD451A3.idx  q20type_traits.h.2CF6DDBE56E33F52.idx  qalgorithms.h.1BAFECF2D20E20E5.idx  qanystringview.h.6A53E38E9AF887FF.idx  qarraydata.h.DC2174F691E6359B.idx  qarraydataops.h.1AF9BFCAA41C7C90.idx  qarraydatapointer.h.F7F3C735F96BFB30.idx  qassert.h.C8F2D331C6F57EB1.idx  qatomic.h.1AA630567CC253D6.idx  qatomic_cxx11.h.AF88FA857102A8FC.idx  qbasicatomic.h.8BFB45E2461B122E.idx  qbindingstorage.h.E97DF962BFFB6D34.idx  qbytearray.h.275C547B2235B7AD.idx  qbytearrayalgorithms.h.351C0470A9E7056E.idx  qbytearraylist.h.046E15DD59993F33.idx  qbytearrayview.h.979DA3086DE35E57.idx  (+103 more)
server/server/: CMakeLists.txt  main.cpp  resources.qrc  server.pro
server/server/database/: databaseManager.cpp  databaseManager.h  queries.cpp  requests.cpp
server/server/jsonManager/: jsonmanager.cpp  jsonmanager.h  jsonmaneger.cpp  jsonmaneger.h
server/server/server/: client.cpp  client.h  myserver.cpp  myserver.h  mythread.cpp  mythread.h  servertask.cpp  servertask.h
server/server/server/certificate/: server.crt  server.key
